# IA_V7

./: .env.example  .gitignore  CHANGELOG.md  README.md  TESTS_MANUELS.md  llms.txt  package-lock.json  package.json  playwright.config.js  playwright.real.config.js  pyproject.toml  run.py
.claude/: zones.md
.claude/commands/: start.md
_archives/: index.md  roadmap_commandes.md
_contexte/: archive_decisions.md  contexte.md  signals.md
_docs/: MIGRATION.md
benchmarks/: rapport_rgpd.md  rgpd_corpus.json
scripts/: benchmark_rgpd.py  migrate_from_sereniatech.py  run_real_ui_test_server.py  run_ui_test_server.py
src/ia_v7/: __main__.py  app.py  config.py
src/ia_v7/infrastructure/: database.py  ollama.py  repository.py
src/ia_v7/services/: chat.py  commands.py  context.py
src/ia_v7/web/: routes.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
tests/: conftest.py  test_api.py  test_benchmark_rgpd.py  test_chat.py  test_commands.py  test_context.py  test_migration.py  test_ui_contract.py
tests-perso/: doc_test_rgpd.txt
tests-ui/: ui.spec.js
tests-ui-real/: real-ollama.spec.js
