[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-v7"
version = "1.0.0"
description = "Interface locale autonome pour Ollama extraite de SerenIA Tech"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4",
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
test = ["pytest>=8,<10", "pytest-cov>=5,<7"]

[project.scripts]
ia-v7 = "ia_v7.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

